--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.2",
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "monaco-editor-webpack-plugin": "^1.7.0",
+    "vue": "^2.6.10",
+    "vue-monaco": "^1.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
@@ -18,6 +22,10 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "highlight.js": "^9.15.10",
+    "marked": "^0.7.0",
+    "pug": "^2.0.4",
+    "pug-plain-loader": "^1.0.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
