--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "core-js": "^2.6.5",
     "monaco-editor-webpack-plugin": "^1.7.0",
     "vue": "^2.6.10",
-    "vue-monaco": "^1.1.0"
+    "vue-monaco": "^1.1.0",
+    "vue-router": "^3.0.3",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
